objects/Offering_Type_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>April__c</fullName>
        <defaultValue>false</defaultValue>
        <label>April</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>August__c</fullName>
        <defaultValue>false</defaultValue>
        <label>August</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dec__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dec</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Feb__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Feb</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Jan__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Jan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>July__c</fullName>
        <defaultValue>false</defaultValue>
        <label>July</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>June__c</fullName>
        <defaultValue>false</defaultValue>
        <label>June</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Land_Diff_Amount__c</fullName>
        <label>Land Diff Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>March__c</fullName>
        <defaultValue>false</defaultValue>
        <label>March</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>May__c</fullName>
        <defaultValue>false</defaultValue>
        <label>May</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Nov__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Nov</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Oct__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Oct</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Quarter_Selection__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Quarter Selection</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Risk_Threshold_Amount__c</fullName>
        <label>Risk Threshold Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Risk_Upside__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Risk Upside</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sept__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sept</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Subscription__c</fullName>
        <label>Subscription</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Upside_Threshold_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Upside Threshold Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>Offering Type Settings</label>
</CustomObject>